--- a/SCI_Views/SCI_Views.csproj
+++ b/SCI_Views/SCI_Views.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SCI_Controllers\SCI_Controllers.csproj" />
     <ProjectReference Include="..\SCI_Models\SCI_Models.csproj" />
   </ItemGroup>
 
